--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- logo -->
-    <link rel="icon" href="./img/logoo.png" type="image" sizes="16x16" />
+    <link rel="icon" href="./img/log.png" type="image" sizes="192x192" width="50px"/>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
@@ -18,7 +18,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <title>Smart IT</title>
+    <title>Creative IT</title>
   </head>
   <body>
     <div class="scroll-up-btn">
@@ -28,7 +28,7 @@
       <nav>
         <div class="sticy"></div>
         <div class="logo">
-          <h4>Uzb <span>IT</span></h4>
+          <h4>Creative <span>IT</span></h4>
         </div>
 
         <ul class="nav-links">
@@ -52,7 +52,7 @@
         <div class="max-width">
           <div class="home-content">
             <div class="text-1">Salom, biz sizga ko'maklashamiz</div>
-            <div class="text-2">Uzb IT</div>
+            <div class="text-2">Creative IT</div>
             <div class="text-3"><span class="typing">SMM</span> xizmatlari</div>
             <a href="#">Biz bilan</a>
           </div>
@@ -71,7 +71,7 @@
           </div>
           <div class="column right">
             <div class="text">
-              Uzb IT jamoasi <span>Buyuk Kelajak sari</span>
+              Creative IT jamoasi <span>Buyuk Kelajak sari</span>
             </div>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta
@@ -375,7 +375,7 @@
               <i class="fas fa-users"></i>
               <div class="info">
                 <head>name</head>
-                <div class="sub-title">Ajabo IT</div>
+                <div class="sub-title">Creative IT</div>
               </div>
 
             </div>
@@ -393,7 +393,7 @@
               <i class="fas fa-envelope"></i>
               <div class="info">
                 <head>Email</head>
-                <div class="sub-title">ajaboit@gmail.com</div>
+                <div class="sub-title">creativeit@gmail.com</div>
               </div>
 
             </div>
